Add  support to fit macOS to run